<resources>
    <string name="app_name">Practica 1</string>
    <string name="jugar">Jugar</string>
    <string name="cambiarTema">Cambiar Tema</string>
    <string name="question_number">1/10</string>
    <string name="timer">0:59</string>
    <string name="siguiente">Siguiente</string>
    <string name="question_placeholder">TextView</string>
    <string name="imagedesc_placeholder">Image placeholder</string>
    <string name="result">¡Resultado!</string>
    <string name="score">Score placeholder</string>
    <string name="reviewAnswers">Repasa tus respuestas</string>
    <string name="statement">Question_placeholder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="numberquestion_answer">0</string>
    <string name="quiz_advice">Selecciona una respuesta</string>
    <string name="opciones">OPCIONES</string>
    <string name="perfiles">PERFILES</string>
    <string name="clasificaci_n">RANKING</string>

    <!--Preferences-->
    <string name="setting_Qcuantity">Cantidad de preguntas</string>
    <string name="nombre">Nombre</string>

</resources>