<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Activities.ResultsActivity">

    <TextView
        android:id="@+id/result_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/result"
        android:textSize="40sp"
        android:layout_gravity="top|center_horizontal" />

    <TextView
        android:id="@+id/result_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/score"
        android:textSize="34sp"
        android:layout_gravity="center_horizontal" />
    <Button
        android:id="@+id/button_redoQuiz"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/blue"
        android:text="Volver a jugar" />
    <TextView
        android:id="@+id/result_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/reviewAnswers"
        android:textSize="24sp"
        android:layout_gravity="center" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/result_review_recycler"
        android:scrollbars="vertical"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>